force-app/main/default/objects/Insurance_Policy__c/Insurance_Policy__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy</label>
    <nameField>
        <displayFormat>POL-{0000}</displayFormat>
        <label>Policy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>