force-app/main/default/objects/Insurance_Policy__c/fields/Annual_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Annual_Maximum__c</fullName>
    <label>Annual Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>