force-app/main/default/objects/Insurance_Policy__c/fields/Benefits_Used_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Used_To_Date__c</fullName>
    <label>Benefits Used To Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>