force-app/main/default/objects/Insurance_Policy__c/fields/Crown_Frequency_Limit_Years__c.field-meta.xml
<CustomField>
    <fullName>Crown_Frequency_Limit_Years__c</fullName>
    <label>Crown Frequency Limit Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>